--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,10 +4,15 @@
 </head>
 <body>
 
-<div id="content"></div>
+    <div id="content"></div>
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-<script src="//canjs.com/release/2.2.5/can.jquery.js"></script>
-<script src="js/app.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <!--<script src="//canjs.com/release/2.2.5/can.jquery.js"></script>-->
+    <script src="js/can.custom.js"></script>
+
+    <script src="js/app.js"></script>
+    <script src="js/model.js"></script>
+    <script src="js/controller.js"></script>
+    <script src="js/router.js"></script>
 </body>
 </html>
