--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,8 +7,7 @@
     <div id="content"></div>
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <!--<script src="//canjs.com/release/2.2.5/can.jquery.js"></script>-->
-    <script src="js/can.custom.js"></script>
+    <script src="//canjs.com/release/2.2.5/can.jquery.js"></script>
 
     <script src="js/app.js"></script>
     <script src="js/model.js"></script>
