--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,15 +3,8 @@
     <title>CanJS + TomEE</title>
 </head>
 <body>
-
     <div id="content"></div>
 
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="//canjs.com/release/2.2.5/can.jquery.js"></script>
-
-    <script src="js/app.js"></script>
-    <script src="js/model.js"></script>
-    <script src="js/controller.js"></script>
-    <script src="js/router.js"></script>
+    <script data-main="js/app" src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.17/require.min.js"></script>
 </body>
 </html>
